# dakar2011

./: BigTerrain.cpp  BigTerrain.h  CBillboardGroupSceneNode.cpp  CGUITexturedSkin.cpp  CGUITexturedSkin.h  CImageGUISkin.cpp  CImageGUISkin.h  CObjectWire.cpp  CObjectWire.h  CQuad.h  CScreenQuad.h  CTreeGenerator.cpp  CTreeGenerator.h  CTreeSceneNode.cpp  CTreeSceneNode.h  CustomDGRayCastCar.cpp  CustomDGRayCastCar.h  CustomJointLibraryStdAfx.h  CustomMultiBodyVehicle.cpp  CustomMultiBodyVehicle.h  Dakar2011.cbp  Dakar2011.cpp  Dakar2011.dev  Dakar2011.rc  Dakar2011.sh  Dakar2011.sln  Dakar2011.vcxproj  Dakar2011.vcxproj.filters  Dakar2011_irrKlang.sh  Dakar2011_private.h  Dakar2011_private.rc  IrrCg.cpp  IrrCg.h  IrrCgExtensionHandler.h  IrrCgMaterial.cpp  IrrCgMaterial.h  IrrCgSceneNode.cpp  IrrCgSceneNode.h  Makefile  Makefile.in  (+78 more)
data/: settings.txt
data/bigterrains/: bigterrain1.txt  bigterrain10.txt  bigterrain11.txt  bigterrain12.txt  bigterrain13.txt  bigterrain14.txt  bigterrain14_old.txt  bigterrain1_old.txt  bigterrain2.txt  bigterrain2_old.txt  bigterrain3.txt  bigterrain3_old.txt  bigterrain4.txt  bigterrain5.txt  bigterrain6.txt  bigterrain7.txt  bigterrain8.txt  bigterrain9.txt  bigterrain9_old.txt
data/bigterrains/ocean/: ocean_surface.mso
data/competitors/: car.txt
data/gameplay/: gameplay.txt  gameplay_old.txt
data/itiner/: itiner_types.txt
data/objects/: ai_point.mso  barrier_red_45.mso  grass_types.txt  house1_normal_5.mso  house2_normal_3.mso  house3_old_1.mso  house4_old_12.mso  house_high1_medium.mso  house_high1_small.mso  house_high1_tall.mso  house_high3_medium.mso  house_high3_tall.mso  my_tree3.mso  my_tree_types.txt  object_types.txt  objects1.txt  objects10.txt  objects11.txt  objects12.txt  objects13.txt  objects14.txt  objects14_old.txt  objects1_old.txt  objects2.txt  objects3.txt  objects4.txt  objects5.txt  objects6.txt  objects7.txt  objects8.txt  objects9.txt  objects9_old.txt  objects_types.txt  tree_types.txt
data/objects/trees/: Aspen.xml  Oak.xml  Pine_rep.xml  Willow.xml  branch1.xml  branch2.xml  branch3.xml  branch4.xml  branch5.xml
data/objects/trees/CVS/: Entries  Repository  Root
data/roads/: road_types.txt  roads1.txt  roads13.txt  roads14_old.txt  roads2.txt  roads3.txt  roads3_old.txt  roads4.txt  roads5.txt  roads6.txt  roads9.txt  roads9_old.txt
data/shaders/cg/: depth_sun.cg  light_2tex.cg  light_2tex_2.cg  light_notex.cg  light_notex_car.cg  light_notex_wfar.cg  light_tex.cg  light_tex_s.cg  light_tex_s_car.cg  light_tex_s_car_tyre.cg  light_tex_wfar.cg  light_transp.cg  ocean.cg  ocean_fix.cg  palca.cg  road.cg  screen_rtt.cg  shadow.cg  sky.cg  smoke.cg  tex.cg  transp_obj.cg  transp_road.cg  transp_stat.cg
data/shaders/cg_mrt/: common.cg  depth.cg  light_2tex.cg  light_2tex_2.cg  light_2tex_2_adv.cg  light_2tex_2_d3d9.cg  light_notex.cg  light_notex_car.cg  light_notex_wfar.cg  light_tex.cg  light_tex_s.cg  light_tex_s_car.cg  light_tex_s_car_d3d9.cg  light_tex_s_car_tyre.cg  light_tex_wfar.cg  light_transp.cg  ocean.cg  ocean_fix.cg  palca.cg  road.cg  screen_rtt.cg  screen_rtt_d3d9.cg  shadow.cg  sky.cg  smoke.cg  tex.cg  transp_obj.cg  transp_road.cg  transp_stat.cg  transp_sun.cg
data/vehicles/: car_blue_jeep.txt  car_bmw.txt  car_bmw_hol.txt  car_bmw_mon.txt  car_bmw_nov.txt  car_bowler.txt  car_buggy.txt  car_hummer.txt  car_hummer_g.txt  car_jeep_big_wheel.txt  car_mcrae.txt  car_mcrae_old.txt  car_mini.txt  car_mitsu.txt  car_mitsu_paj.txt  car_mitsu_paj_old.txt  car_mitsu_paj_old2.txt  car_mitsu_w.txt  car_nissan.txt  car_nissan_p.txt  car_opel.txt  car_paneus.txt  car_pickup1.txt  car_proto1.txt  car_proto2.txt  car_sil.txt  car_toyota.txt  car_toyota_2.txt  car_toyota_3.txt  car_vw2.txt  car_vw3.txt  vehicle_list.txt
server/: own_server_udp.cpp
